# multiservice

./: .gitignore  Makefile  README.md  multiservice.py  multiservice_sample.yml  pyproject.toml  requirements.txt  setup.cfg
